Formatting for C API doc for GEOSOffsetCurve

--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -2329,11 +2329,12 @@ extern GEOSGeometry GEOS_DLL *GEOSDensify(
 /**
 * Generates offset curve line(s) for a geometry.
 * Handles all geometry types as input.
-* For a LineString the offset curve is a LineString.
-* For a Point the result is an empty LineString.
-* For a Polygon the result is the boundary lines(s) of the polygon buffered to the offset distance
-* (which may be a MultiLineString).
-* For a collection the result is a collection of the element offset curves.
+*
+* - For a LineString the result is a LineString.
+* - For a Point the result is an empty LineString.
+* - For a Polygon the result is the boundary lines(s) of the polygon buffered to the offset distance
+*   (which may be a MultiLineString).
+* - For a collection the result is a collection of the element offset curves.
 * \param g The linear geometry to offset from
 * \param width Distance to offset from the curve.
 *        Negative for a right-side offset.
