--- a/capi/geos_c.h.in
+++ b/capi/geos_c.h.in
@@ -3135,8 +3135,8 @@ extern int GEOS_DLL GEOSSegmentIntersection(
 
 /* ========= Binary Predicates ========= */
 /** @name Binary Predicates
-* Functions which compute binary spatial predicates.
-* Includes functions based on the DE-9IM topology model.
+* Functions computing binary spatial predicates.
+* Includes functions using the DE-9IM topology model.
 */
 ///@{
 
@@ -3254,6 +3254,64 @@ extern char GEOS_DLL GEOSEqualsExact(
     const GEOSGeometry* g1,
     const GEOSGeometry* g2,
     double tolerance);
+
+/* ========= Dimensionally Extended 9 Intersection Model ========= */
+
+/**
+* Calculate the DE9IM pattern for this geometry pair
+* and compare against the provided pattern to check for
+* consistency. If the result and pattern are consistent
+* return true. The pattern may include glob "*" characters
+* for portions that are allowed to match any value.
+* \see geos::geom::Geometry::relate
+* \param g1 First geometry in pair
+* \param g2 Second geometry in pair
+* \param pat DE9IM pattern to check
+* \return 1 on true, 0 on false, 2 on exception
+*/
+extern char GEOS_DLL GEOSRelatePattern(
+    const GEOSGeometry* g1,
+    const GEOSGeometry* g2,
+    const char *pat);
+
+/**
+* Calculate and return the DE9IM pattern for this geometry pair.
+* \see geos::geom::Geometry::relate
+* \param g1 First geometry in pair
+* \param g2 Second geometry in pair
+* \return DE9IM string. Caller is responsible for freeing with GEOSFree().
+*         NULL on exception
+*/
+extern char GEOS_DLL *GEOSRelate(
+    const GEOSGeometry* g1,
+    const GEOSGeometry* g2);
+
+/**
+* Compare two DE9IM patterns and return true if they
+* are consistent.
+* \param mat Complete DE9IM string (does not have "*")
+* \param pat Pattern to match to (may contain "*")
+* \return 1 on true, 0 on false, 2 on exception
+*/
+extern char GEOS_DLL GEOSRelatePatternMatch(
+    const char *mat,
+    const char *pat);
+
+/**
+* Calculate and return the DE9IM pattern for this geometry pair.
+* Apply the supplied \ref GEOSRelateBoundaryNodeRules.
+* \see geos::geom::Geometry::relate
+* \see geos::algorithm::BoundaryNodeRule
+* \param g1 First geometry in pair
+* \param g2 Second geometry in pair
+* \param bnr A member of the \ref GEOSRelateBoundaryNodeRules enum
+* \return DE9IM string. Caller is responsible for freeing with GEOSFree().
+*         NULL on exception
+*/
+extern char GEOS_DLL *GEOSRelateBoundaryNodeRule(
+    const GEOSGeometry* g1,
+    const GEOSGeometry* g2,
+    int bnr);
 
 ///@}
 
@@ -3622,65 +3680,6 @@ extern char GEOS_DLL GEOSHasZ(const GEOSGeometry* g);
 * \return 1 on true, 0 on false, 2 on exception
 */
 extern char GEOS_DLL GEOSisClosed(const GEOSGeometry *g);
-
-/* ========= Dimensionally Extended 9 Intersection Model ========= */
-
-/**
-* Calculate the DE9IM pattern for this geometry pair
-* and compare against the provided pattern to check for
-* consistency. If the result and pattern are consistent
-* return true. The pattern may include glob "*" characters
-* for portions that are allowed to match any value.
-* \see geos::geom::Geometry::relate
-* \param g1 First geometry in pair
-* \param g2 Second geometry in pair
-* \param pat DE9IM pattern to check
-* \return 1 on true, 0 on false, 2 on exception
-*/
-extern char GEOS_DLL GEOSRelatePattern(
-    const GEOSGeometry* g1,
-    const GEOSGeometry* g2,
-    const char *pat);
-
-/**
-* Calculate and return the DE9IM pattern for this geometry pair.
-* \see geos::geom::Geometry::relate
-* \param g1 First geometry in pair
-* \param g2 Second geometry in pair
-* \return DE9IM string. Caller is responsible for freeing with GEOSFree().
-*         NULL on exception
-*/
-extern char GEOS_DLL *GEOSRelate(
-    const GEOSGeometry* g1,
-    const GEOSGeometry* g2);
-
-/**
-* Compare two DE9IM patterns and return true if they
-* are consistent.
-* \param mat Complete DE9IM string (does not have "*")
-* \param pat Pattern to match to (may contain "*")
-* \return 1 on true, 0 on false, 2 on exception
-*/
-extern char GEOS_DLL GEOSRelatePatternMatch(
-    const char *mat,
-    const char *pat);
-
-/**
-* Calculate and return the DE9IM pattern for this geometry pair.
-* Apply the supplied \ref GEOSRelateBoundaryNodeRules.
-* \see geos::geom::Geometry::relate
-* \see geos::algorithm::BoundaryNodeRule
-* \param g1 First geometry in pair
-* \param g2 Second geometry in pair
-* \param bnr A member of the \ref GEOSRelateBoundaryNodeRules enum
-* \return DE9IM string. Caller is responsible for freeing with GEOSFree().
-*         NULL on exception
-*/
-extern char GEOS_DLL *GEOSRelateBoundaryNodeRule(
-    const GEOSGeometry* g1,
-    const GEOSGeometry* g2,
-    int bnr);
-
 
 /* ========== Validity checking ========== */
 
